css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

.middle-content {
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.middle-content .boxes .box {
    width: 12.5%;
    height: 100px;
    background: black;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}

footer {
    width: 100%;
    background: black;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}

/* My code starts Here */

header nav{
    width:100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2%;
  }

  nav .logo {
    width: 25%;
    display: flex;
  }

  nav .links {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 2%;
    width: 100%;
  }

  nav a{
    color black;
    text-decoration:none;
    letter-spacing:3px;
    padding: 0 2%;
  }

  .jumbo{
      padding: 0 0 2% 0;
      display: flex;
      justify-content: center;
  }

  .middle-content .boxes .box {
    background-color: teal;
}

.middle-content .boxes .box:nth-child(2n) {
    background-color: gold;
}

.middle-content .boxes .box:nth-child(3n) {
    background-color: cadetblue;
}

.middle-content .boxes .box:nth-child(4n) {
    background-color: coral;
}

.middle-content .boxes .box:nth-child(5n) {
    background-color: crimson;
}

.middle-content .boxes .box:nth-child(6n) {
    background-color: forestgreen;
}

.middle-content .boxes .box:nth-child(7n) {
    background-color: darkorchid;
}

.middle-content .boxes .box:nth-child(8n) {
    background-color: hotpink;
}

.middle-content .boxes .box:nth-child(9n) {
    background-color: indigo;
}

.middle-content .boxes .box:nth-child(10n) {
    background-color: dodgerblue;


    .under-about {
        border: 1px dashed black;
    }
    
    .about-top {
        padding: 0 1%;
        width: 95%;
        margin: 0 auto;
    }
    
    .about-block-container {
        display: flex;
        flex-flow: row wrap;
    }
    
    .about-items {
        padding: 3% 3%;
        width: 48%;
    }
    
    .about-items-content {
        padding: 2% 0;
        border-bottom: 1px dashed black;
        width: 110%;
    }
    
    .about-items-content .btn {
        line-height: 3;
        border: 1px solid black;
        border-radius: 8px;
        padding: 2%;
    }
    
    .about-bottom-content {
        padding: 3% 0 5% 0;
        width: 95%;
        margin: 0 auto;
    }

